# Git-Glance

./: .gitignore  LICENSE  README.md  pyproject.toml
git-glance/: git.py  main.py
git_glance/: __init__.py  config.py  git.py  main.py
