[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-glance"
version = "1.3.0"
description = "A CLI tool to track multiple Git repositories"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [ { name = "Harshit Thota" } ]
keywords = ["git", "cli", "tool", "rich", "typer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
    "Operating System :: OS Independent"
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=2.5"
]

[project.scripts]
git-glance = "git_glance.main:app"